k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: annotate-app
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5000
