k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: annotate-app
spec:
  selector:
    app: frontend
  ports:
  - port: 8501
    targetPort: 8501
